# options-bsm-montecarlo-toolkit

./: .gitignore  LICENSE  METHODS.md  README.md  VERIFICATION.md  pyproject.toml  requirements.txt  run_tests.sh
notebooks/: 01_bsm_pricing_and_greeks.ipynb  02_implied_volatility.ipynb  03_monte_carlo_and_strategies.ipynb
src/options_toolkit/: __init__.py  bsm.py  monte_carlo.py  payoffs.py  strategies.py  utils.py  viz.py
tests/: __init__.py  test_bsm.py  test_monte_carlo.py  test_strategies.py
