[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-toolkit"
version = "0.1.0"
description = "Educational toolkit for option pricing using Black-Scholes-Merton and Monte Carlo methods"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Manmeet Singh Hayer"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

